--- a/freecad/ToOptixWorkbench/Qt/dlg_tooptix_start.ui
+++ b/freecad/ToOptixWorkbench/Qt/dlg_tooptix_start.ui
@@ -14,67 +14,41 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="6" column="0">
-    <widget class="QLabel" name="label_variables">
-     <property name="text">
-      <string>Variables</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QLineEdit" name="lineEdit_name"/>
-   </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="label_kind">
-     <property name="text">
-      <string>Kind</string>
-     </property>
-    </widget>
-   </item>
    <item row="3" column="0">
-    <widget class="QLineEdit" name="lineEdit_kind">
-     <property name="readOnly">
-      <bool>true</bool>
+    <widget class="QLabel" name="label_optimization_type">
+     <property name="text">
+      <string>Optimization type</string>
      </property>
     </widget>
    </item>
    <item row="0" column="0">
-    <widget class="QLabel" name="label_name">
+    <widget class="QLabel" name="label_solution_type">
      <property name="text">
-      <string>Name</string>
+      <string>Solution type</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="0">
-    <widget class="QTableWidget" name="tableWidget_variables">
-     <property name="columnCount">
-      <number>3</number>
-     </property>
-     <column>
+   <item row="4" column="0">
+    <widget class="QComboBox" name="combobox_optimization_type">
+     <item>
       <property name="text">
-       <string>Variable</string>
+       <string>separate</string>
       </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Value</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>type</string>
-      </property>
-     </column>
+     </item>
     </widget>
    </item>
-   <item row="8" column="0">
-    <widget class="QLabel" name="label_annotations">
-     <property name="text">
-      <string>Annotations</string>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
+   <item row="1" column="0">
+    <widget class="QComboBox" name="combobox_solution_type">
+     <item>
+      <property name="text">
+       <string>static</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>heat</string>
+      </property>
+     </item>
     </widget>
    </item>
   </layout>
