--- a/freecad/ToOptixWorkbench/Qt/dlg_tooptix_start.ui
+++ b/freecad/ToOptixWorkbench/Qt/dlg_tooptix_start.ui
@@ -14,48 +14,38 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="13" column="0">
+   <item row="21" column="0">
     <widget class="QLabel" name="label_optimization_type">
      <property name="text">
       <string>Optimization type</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="0">
+   <item row="18" column="0">
     <widget class="QLabel" name="label_solution_type">
      <property name="text">
       <string>Solution type</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="12" column="0">
     <widget class="QLabel" name="label_iterations">
      <property name="text">
       <string>Iterations</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="0">
+   <item row="14" column="0">
     <widget class="QLabel" name="label_penalty_factor">
      <property name="text">
       <string>Penalty factor</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="11" column="0">
     <widget class="QSpinBox" name="spinbox_cpus"/>
    </item>
-   <item row="8" column="0">
-    <widget class="QLabel" name="label_volume_factor">
-     <property name="text">
-      <string>Volume factor</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QTextEdit" name="textedit_fea_message"/>
-   </item>
-   <item row="14" column="0">
+   <item row="22" column="0">
     <widget class="QComboBox" name="combobox_optimization_type">
      <item>
       <property name="text">
@@ -64,7 +54,17 @@
      </item>
     </widget>
    </item>
-   <item row="11" column="0">
+   <item row="1" column="0">
+    <widget class="QTextEdit" name="textedit_fea_message"/>
+   </item>
+   <item row="16" column="0">
+    <widget class="QLabel" name="label_volume_factor">
+     <property name="text">
+      <string>Volume factor</string>
+     </property>
+    </widget>
+   </item>
+   <item row="19" column="0">
     <widget class="QComboBox" name="combobox_solution_type">
      <item>
       <property name="text">
@@ -78,14 +78,14 @@
      </item>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="10" column="0">
     <widget class="QLabel" name="label_cpus">
      <property name="text">
       <string>CPUs</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="0">
+   <item row="13" column="0">
     <widget class="QSpinBox" name="spinbox_iterations">
      <property name="maximum">
       <number>1000</number>
@@ -95,7 +95,7 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="0">
+   <item row="15" column="0">
     <widget class="QDoubleSpinBox" name="doublespinbox_penalty_factor">
      <property name="value">
       <double>3.000000000000000</double>
@@ -109,12 +109,45 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="0">
+   <item row="17" column="0">
     <widget class="QDoubleSpinBox" name="doublespinbox_volume_factor">
      <property name="value">
       <double>0.400000000000000</double>
      </property>
     </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label_calculix_binary">
+     <property name="text">
+      <string>Calculix Binary</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetMaximumSize</enum>
+     </property>
+     <property name="bottomMargin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLineEdit" name="lineedit_ccx_binary"/>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushbutton_ccx_binary">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
