--- a/freecad/ToOptixWorkbench/Qt/dlg_tooptix_start.ui
+++ b/freecad/ToOptixWorkbench/Qt/dlg_tooptix_start.ui
@@ -14,117 +14,25 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="21" column="0">
-    <widget class="QLabel" name="label_optimization_type">
+   <item row="5" column="1">
+    <widget class="QLabel" name="label_working_directory">
      <property name="text">
-      <string>Optimization type</string>
+      <string>Working Directory</string>
      </property>
     </widget>
    </item>
-   <item row="18" column="0">
-    <widget class="QLabel" name="label_solution_type">
-     <property name="text">
-      <string>Solution type</string>
-     </property>
-    </widget>
-   </item>
-   <item row="12" column="0">
-    <widget class="QLabel" name="label_iterations">
-     <property name="text">
-      <string>Iterations</string>
-     </property>
-    </widget>
-   </item>
-   <item row="14" column="0">
-    <widget class="QLabel" name="label_penalty_factor">
-     <property name="text">
-      <string>Penalty factor</string>
-     </property>
-    </widget>
-   </item>
-   <item row="11" column="0">
-    <widget class="QSpinBox" name="spinbox_cpus"/>
-   </item>
-   <item row="22" column="0">
-    <widget class="QComboBox" name="combobox_optimization_type">
-     <item>
-      <property name="text">
-       <string>separate</string>
-      </property>
-     </item>
-    </widget>
-   </item>
-   <item row="1" column="0">
+   <item row="1" column="1">
     <widget class="QTextEdit" name="textedit_fea_message"/>
    </item>
-   <item row="16" column="0">
-    <widget class="QLabel" name="label_volume_factor">
-     <property name="text">
-      <string>Volume factor</string>
-     </property>
-    </widget>
-   </item>
-   <item row="19" column="0">
-    <widget class="QComboBox" name="combobox_solution_type">
-     <item>
-      <property name="text">
-       <string>static</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>heat</string>
-      </property>
-     </item>
-    </widget>
-   </item>
-   <item row="10" column="0">
-    <widget class="QLabel" name="label_cpus">
-     <property name="text">
-      <string>CPUs</string>
-     </property>
-    </widget>
-   </item>
-   <item row="13" column="0">
-    <widget class="QSpinBox" name="spinbox_iterations">
-     <property name="maximum">
-      <number>1000</number>
-     </property>
-     <property name="value">
-      <number>100</number>
-     </property>
-    </widget>
-   </item>
-   <item row="15" column="0">
-    <widget class="QDoubleSpinBox" name="doublespinbox_penalty_factor">
-     <property name="value">
-      <double>3.000000000000000</double>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0">
+   <item row="0" column="1">
     <widget class="QLabel" name="label_fea_message">
      <property name="text">
       <string>Message from FEA</string>
      </property>
     </widget>
    </item>
-   <item row="17" column="0">
-    <widget class="QDoubleSpinBox" name="doublespinbox_volume_factor">
-     <property name="value">
-      <double>0.400000000000000</double>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="label_calculix_binary">
-     <property name="text">
-      <string>Calculix Binary</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+   <item row="4" column="1">
+    <layout class="QHBoxLayout" name="horizontalLayout_ccx_binary">
      <property name="sizeConstraint">
       <enum>QLayout::SetMaximumSize</enum>
      </property>
@@ -145,6 +53,129 @@
        <property name="text">
         <string>...</string>
        </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="3" column="1">
+    <widget class="QLabel" name="label_calculix_binary">
+     <property name="text">
+      <string>Calculix Binary</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <layout class="QHBoxLayout" name="horizontalLayout_working_directory">
+     <property name="bottomMargin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLineEdit" name="lineedit_working_directory"/>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushbutton_working_directory">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="7" column="1">
+    <layout class="QGridLayout" name="gridLayout_options">
+     <property name="bottomMargin">
+      <number>0</number>
+     </property>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_solution_type">
+       <property name="text">
+        <string>Solution type</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_penalty_factor">
+       <property name="text">
+        <string>Penalty factor</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QSpinBox" name="spinbox_iterations">
+       <property name="maximum">
+        <number>1000</number>
+       </property>
+       <property name="value">
+        <number>100</number>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QDoubleSpinBox" name="doublespinbox_volume_factor">
+       <property name="value">
+        <double>0.400000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_volume_factor">
+       <property name="text">
+        <string>Volume factor</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_cpus">
+       <property name="text">
+        <string>CPUs</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QDoubleSpinBox" name="doublespinbox_penalty_factor">
+       <property name="value">
+        <double>3.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QSpinBox" name="spinbox_cpus"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_iterations">
+       <property name="text">
+        <string>Iterations</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QComboBox" name="combobox_solution_type">
+       <item>
+        <property name="text">
+         <string>static</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>heat</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_optimization_type">
+       <property name="text">
+        <string>Optimization type</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QComboBox" name="combobox_optimization_type">
+       <item>
+        <property name="text">
+         <string>separate</string>
+        </property>
+       </item>
       </widget>
      </item>
     </layout>
